[gd_scene load_steps=12 format=3 uid="uid://2j0scq6o8os4"]

[ext_resource type="Script" path="res://Scripts/Play Mode/play_mode.gd" id="1_1miux"]
[ext_resource type="PackedScene" uid="uid://dvtnux5cehs7f" path="res://Scenes/Prefabs/note.tscn" id="2_0o1h3"]
[ext_resource type="PackedScene" uid="uid://dhqume7wjmm2m" path="res://Scenes/Prefabs/note_hold_bar.tscn" id="3_34biu"]
[ext_resource type="Script" path="res://Scripts/Play Mode/track.gd" id="3_kjujb"]
[ext_resource type="Script" path="res://Scripts/Play Mode/miss_zone.gd" id="4_k415y"]
[ext_resource type="PackedScene" uid="uid://bi4oavdpoagj2" path="res://Scenes/Prefabs/note_catcher.tscn" id="4_ksgej"]
[ext_resource type="Script" path="res://Scripts/Play Mode/pause_menu.gd" id="5_m4osi"]
[ext_resource type="Theme" uid="uid://u2vkss84xngl" path="res://Graphics Assets/default_theme.tres" id="5_sfb4n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6n21a"]
size = Vector2(800, 50)

[sub_resource type="LabelSettings" id="LabelSettings_ofn70"]
font_size = 29

[sub_resource type="GDScript" id="GDScript_u5yje"]
script/source = "extends ProgressBar

@export var label : Label;
"

[node name="PlayMode" type="Node2D" node_paths=PackedStringArray("track", "song_player", "note_catcher", "start_label", "pause_menu", "score_display")]
process_mode = 1
script = ExtResource("1_1miux")
pixels_per_second = 600
note_scene = ExtResource("2_0o1h3")
held_note_scene = ExtResource("3_34biu")
track = NodePath("Track")
song_player = NodePath("SongPlayer")
note_catcher = NodePath("NoteCatcher")
start_label = NodePath("StartLabel")
pause_menu = NodePath("PauseMenu")
score_display = NodePath("UI/ScoreDisplay")
scene_name = "play mode"

[node name="SongPlayer" type="AudioStreamPlayer" parent="."]

[node name="MissZone" type="Area2D" parent="." node_paths=PackedStringArray("miss_display")]
position = Vector2(0, 360)
script = ExtResource("4_k415y")
miss_display = NodePath("../UI/MissDIsplay")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MissZone"]
position = Vector2(560, 280)
shape = SubResource("RectangleShape2D_6n21a")
debug_color = Color(0.988235, 0, 0.32549, 0.419608)

[node name="Track" type="CharacterBody2D" parent="."]
position = Vector2(0, 360)
script = ExtResource("3_kjujb")

[node name="StartLabel" type="Label" parent="."]
offset_left = 320.0
offset_top = 200.0
offset_right = 800.0
offset_bottom = 240.0
text = "Press Space to Start!"
label_settings = SubResource("LabelSettings_ofn70")
horizontal_alignment = 1

[node name="NoteCatcher" parent="." instance=ExtResource("4_ksgej")]
position = Vector2(160, 480)

[node name="NoteCatcher2" parent="." instance=ExtResource("4_ksgej")]
position = Vector2(320, 480)
lane = 2.0

[node name="NoteCatcher3" parent="." instance=ExtResource("4_ksgej")]
position = Vector2(480, 480)
lane = 3.0

[node name="NoteCatcher4" parent="." instance=ExtResource("4_ksgej")]
position = Vector2(640, 480)
lane = 4.0

[node name="NoteCatcher5" parent="." instance=ExtResource("4_ksgej")]
position = Vector2(800, 480)
lane = 5.0

[node name="PauseMenu" type="Control" parent="." node_paths=PackedStringArray("button_panel", "resume_timer", "resume_time_meter")]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_left = 160.0
offset_top = 80.0
offset_right = 960.0
offset_bottom = 480.0
script = ExtResource("5_m4osi")
button_panel = NodePath("ButtonPanel")
resume_timer = NodePath("ResumeTimer")
resume_time_meter = NodePath("ResumeMeter")

[node name="ButtonPanel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeBtn" type="Button" parent="PauseMenu/ButtonPanel"]
layout_mode = 0
offset_top = 40.0
offset_right = 320.0
offset_bottom = 120.0
theme = ExtResource("5_sfb4n")
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="PreviousSceneBtn" type="Button" parent="PauseMenu/ButtonPanel"]
layout_mode = 0
offset_left = 480.0
offset_top = 200.0
offset_right = 800.0
offset_bottom = 280.0
theme = ExtResource("5_sfb4n")
theme_override_font_sizes/font_size = 48
text = "Song Select"

[node name="RestartBtn" type="Button" parent="PauseMenu/ButtonPanel"]
layout_mode = 0
offset_top = 200.0
offset_right = 320.0
offset_bottom = 280.0
theme = ExtResource("5_sfb4n")
theme_override_font_sizes/font_size = 48
text = "Restart
"

[node name="QuitBtn" type="Button" parent="PauseMenu/ButtonPanel"]
layout_mode = 0
offset_left = 160.0
offset_top = 360.0
offset_right = 640.0
offset_bottom = 440.0
theme = ExtResource("5_sfb4n")
theme_override_font_sizes/font_size = 48
text = "Quit to Menu"

[node name="EditBtn" type="Button" parent="PauseMenu/ButtonPanel"]
layout_mode = 0
offset_left = 480.0
offset_top = 40.0
offset_right = 800.0
offset_bottom = 120.0
theme = ExtResource("5_sfb4n")
theme_override_font_sizes/font_size = 48
text = "Edit"

[node name="ResumeMeter" type="ProgressBar" parent="PauseMenu" node_paths=PackedStringArray("label")]
visible = false
layout_mode = 0
offset_left = 160.0
offset_right = 640.0
offset_bottom = 40.0
max_value = 3.0
value = 2.8
show_percentage = false
script = SubResource("GDScript_u5yje")
label = NodePath("Label")

[node name="Label" type="Label" parent="PauseMenu/ResumeMeter"]
layout_mode = 0
offset_top = -40.0
offset_right = 480.0
offset_bottom = -17.0
theme = ExtResource("5_sfb4n")
theme_override_font_sizes/font_size = 22
text = "Resuming In 3..."
horizontal_alignment = 1

[node name="ResumeTimer" type="Timer" parent="PauseMenu"]
wait_time = 3.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MissDIsplay" type="Label" parent="UI"]
layout_mode = 0
offset_top = 40.0
offset_right = 160.0
offset_bottom = 81.0
theme = ExtResource("5_sfb4n")
theme_override_font_sizes/font_size = 30
text = "Misses: 0"

[node name="ScoreDisplay" type="Label" parent="UI"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 41.0
theme = ExtResource("5_sfb4n")
theme_override_font_sizes/font_size = 30
text = "Score: 0"

[connection signal="area_entered" from="MissZone" to="MissZone" method="_on_area_entered"]
[connection signal="edit_button_pressed" from="PauseMenu" to="." method="enter_edit_mode"]
[connection signal="previous_scene_button_pressed" from="PauseMenu" to="." method="_on_pause_menu_previous_scene_button_pressed"]
[connection signal="quit_button_pressed" from="PauseMenu" to="." method="_on_pause_menu_quit_button_pressed"]
[connection signal="restart_button_pressed" from="PauseMenu" to="." method="restart_scene"]
[connection signal="pressed" from="PauseMenu/ButtonPanel/ResumeBtn" to="PauseMenu" method="_on_resume_btn_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonPanel/PreviousSceneBtn" to="PauseMenu" method="_on_previous_scene_btn_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonPanel/RestartBtn" to="PauseMenu" method="_on_restart_btn_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonPanel/QuitBtn" to="PauseMenu" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonPanel/EditBtn" to="PauseMenu" method="_on_edit_btn_pressed"]
[connection signal="timeout" from="PauseMenu/ResumeTimer" to="PauseMenu" method="on_resume_timer_timeout"]
